force-app/main/default/objects/Lead_Routing_Rule__c/Lead_Routing_Rule__c.object-meta.xml
<CustomObject>
    <label>Lead Routing Rule</label>
    <pluralLabel>Lead Routing Rules</pluralLabel>
    <description>Lead Routing Rule</description>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>