force-app/main/default/objects/Lead_Routing_Rule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Priority</description>
</CustomField>