force-app/main/default/objects/Lead_Routing_Rule__c/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>Text</type>
    <length>80</length>
    <description>Product Interest</description>
</CustomField>