force-app/main/default/objects/Lead_Routing_Rule__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <description>Region</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
                <default>true</default>
                <label>North</label>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>ANY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>