force-app/main/default/objects/Lead_Routing_Rule__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <description>Segment</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GOLD</fullName>
                <default>true</default>
                <label>GOLD</label>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>BRONZE</fullName>
            </value>
            <value>
                <fullName>ANY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>