force-app/main/default/objects/Lead_Routing_Rule__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Routing Rules</relationshipLabel>
    <relationshipName>Routing_Rules</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Territory</description>
</CustomField>